# classic_aspects

./: setup.cfg
sources/classic/aspects/: __init__.py  points.py  utils.py
tests/: conftest.py  test_aspects.py
