[metadata]
name = classic-aspects
version = 0.0.1
description = Provides convenient utils for late decorating, based on idea of aspects-oriented programming
author = Sergei Variasov
author_email = variasov@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/variasov/classic_aspects
project_urls =
    Bug Tracker = https://github.com/variasov/classic_aspects/issues
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta


[options]
packages = find_namespace:
python_requires = >=3.7
package_dir =
    = sources


[options.packages.find]
where = sources

[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    twine~=3.4.2
    build~=0.7.0
